Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-793

the freelist dump function are not showing the correct values

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • 2.1.7, 2.0.1
    • 2.1.9
    • Cleanup, Core
    • Linux Debian 5.0 (2.6.26 Kernel) on AMD64.

    Description

      I'm tracking a memory leak in 2.0.1 (possibly exists in latest versions too) and I am relying on the freelist_dump from when a USR1 signal is sent to gather information to determine where a memory leak is happening (I lose 5G a day).

      I notice that it started showing negative numbers pretty quickly when one of the lists was using more than 2G, so I looked in the code and found fprintf was using %d, considering the storage for allocated, type_size,count are unsigned 32 bit integers, that explained the zero.

      I have patched my code to use unsigned and unsigned long long to avoid me losing information in these dumps.

      I checked at this is still the case in at least 2.1.7.

      Attachments

        1. ink_queue.patch
          1 kB
          Ricky Chan

        Activity

          People

            zwoop Leif Hedstrom
            ricky.chan Ricky Chan
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: