TS-793 Improve print statements for ink_freelist debugging

Authors: Ricky Chan and Leif

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1127935 13f79535-47bb-0310-9956-ffa450edef68